// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button list size correctly 1`] = `
<div
  className="buttons are-small"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`button list size correctly 2`] = `
<div
  className="buttons are-medium"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`button list size correctly 3`] = `
<div
  className="buttons are-large"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`buttons size correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-small"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-normal"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-medium"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-large"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`buttons with icons 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    <span />
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fas fa-bold"
      />
    </span>
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    <span />
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fas fa-italic"
      />
    </span>
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    <span />
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fas fa-underline"
      />
    </span>
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Github
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-github"
      />
    </span>
  </button>
  <button
    className="button is-primary"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Twitter
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-twitter"
      />
    </span>
  </button>
  <button
    className="button is-success"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Save
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fas fa-check"
      />
    </span>
  </button>
  <button
    className="button is-danger is-outlined"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fas fa-times"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <button
    className="button is-small"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Github
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-github"
      />
    </span>
  </button>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Github
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-github"
      />
    </span>
  </button>
  <button
    className="button is-medium"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Github
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-github"
      />
    </span>
  </button>
  <button
    className="button is-large"
    disabled={false}
    onClick={[Function]}
  >
    <span>
      Github
    </span>
    <span
      className="icon"
    >
      <i
        aria-hidden="true"
        className="fab fa-github"
      />
    </span>
  </button>
</div>
`;

exports[`color correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
    Testando
  </button>
  <button
    className="button is-primary"
    disabled={false}
    onClick={[Function]}
  >
    Testando
  </button>
  <button
    className="button is-link"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`color secundary correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-white"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-dark"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-black"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-text"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`colors light correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-primary is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-light"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`disabled corretly 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-primary"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger"
    disabled={true}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`fullwidth  correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-small is-fullwidth"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-fullwidth"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-medium is-fullwidth"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-large is-fullwidth"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`inverted  correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-primary is-inverted"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-inverted"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-inverted"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-inverted"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-inverted"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`loading corretly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-primary is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-loading"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`outlined  correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-primary is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-outlined"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`rounded  correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button is-primary is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-rounded"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`state  correctly 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-primary is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-hovered"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`state  correctly 2`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  />
  <button
    className="button is-primary is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-focused"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`state  correctly 3`] = `
<div
  className="buttons"
>
  <button
    className="button"
    disabled={false}
    onClick={[Function]}
  />
  <button
    className="button is-primary is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-link is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-info is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-success is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-warning is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
  <button
    className="button is-danger is-active"
    disabled={false}
    onClick={[Function]}
  >
     Testando
  </button>
</div>
`;

exports[`value correctly 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
/>
`;

exports[`value correctly 2`] = `
<button
  className="button"
  disabled={false}
  onClick={[Function]}
/>
`;
